tests/fsharp/typecheck/sigs/neg16.bsl

neg16.fs(7,13,7,16): typecheck error FS0644: Namespaces cannot contain extension members except in the same file and namespace declaration group where the type is defined. Consider using a module to hold declarations of extension members.

neg16.fs(23,10,23,11): typecheck error FS0935: Types with the 'AllowNullLiteral' attribute may only inherit from or implement types which also allow the use of the null literal

neg16.fs(23,10,23,11): typecheck error FS0935: Types with the 'AllowNullLiteral' attribute may only inherit from or implement types which also allow the use of the null literal

neg16.fs(35,10,35,11): typecheck error FS0934: Records, union, abbreviations and struct types cannot have the 'AllowNullLiteral' attribute

neg16.fs(38,10,38,11): typecheck error FS0934: Records, union, abbreviations and struct types cannot have the 'AllowNullLiteral' attribute

neg16.fs(41,10,41,11): typecheck error FS0934: Records, union, abbreviations and struct types cannot have the 'AllowNullLiteral' attribute

neg16.fs(44,10,44,11): typecheck error FS0934: Records, union, abbreviations and struct types cannot have the 'AllowNullLiteral' attribute

neg16.fs(47,10,47,13): typecheck error FS0934: Records, union, abbreviations and struct types cannot have the 'AllowNullLiteral' attribute

neg16.fs(49,7,49,23): typecheck error FS0842: This attribute is not valid for use on this language element

neg16.fs(52,7,52,23): typecheck error FS0842: This attribute is not valid for use on this language element

neg16.fs(59,7,59,20): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b>'    
but here has type
    'string'    

neg16.fs(60,7,60,24): typecheck error FS0827: This is not a valid name for an active pattern

neg16.fs(61,7,61,32): typecheck error FS0827: This is not a valid name for an active pattern

neg16.fs(62,7,62,19): typecheck error FS0001: This expression was expected to have type
    ''a option'    
but here has type
    'string'    

neg16.fs(67,7,67,28): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b>'    
but here has type
    'string'    

neg16.fs(68,7,68,33): typecheck error FS0827: This is not a valid name for an active pattern

neg16.fs(69,7,69,40): typecheck error FS0827: This is not a valid name for an active pattern

neg16.fs(70,7,70,27): typecheck error FS0001: This expression was expected to have type
    ''a option'    
but here has type
    'string'    

neg16.fs(75,11,75,32): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b>'    
but here has type
    'string'    

neg16.fs(76,11,76,36): typecheck error FS0827: This is not a valid name for an active pattern

neg16.fs(77,12,77,45): typecheck error FS0827: This is not a valid name for an active pattern

neg16.fs(78,11,78,31): typecheck error FS0001: This expression was expected to have type
    ''a option'    
but here has type
    'string'    

neg16.fs(85,8,85,18): typecheck error FS0039: The pattern discriminator 'FooA++' is not defined.

neg16.fs(85,7,85,22): typecheck error FS0025: Incomplete pattern matches on this expression.

neg16.fs(87,50,87,54): typecheck error FS0039: The value or constructor 'OneA' is not defined.

neg16.fs(87,60,87,69): typecheck error FS0039: The value or constructor 'TwoA+' is not defined.

neg16.fs(90,8,90,18): typecheck error FS0039: The pattern discriminator 'FooB++' is not defined.

neg16.fs(90,7,90,22): typecheck error FS0025: Incomplete pattern matches on this expression.

neg16.fs(96,3,97,16): typecheck error FS0823: The 'VolatileField' attribute may only be used on 'let' bindings in classes

neg16.fs(99,3,100,14): typecheck error FS0823: The 'VolatileField' attribute may only be used on 'let' bindings in classes

neg16.fs(99,3,100,14): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(102,3,103,9): typecheck error FS0823: The 'VolatileField' attribute may only be used on 'let' bindings in classes

neg16.fs(102,3,103,9): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(119,17,119,24): typecheck error FS0823: The 'VolatileField' attribute may only be used on 'let' bindings in classes

neg16.fs(106,5,107,19): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(109,5,110,20): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(112,5,113,11): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(115,5,116,13): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(130,10,130,11): typecheck error FS0935: Types with the 'AllowNullLiteral' attribute may only inherit from or implement types which also allow the use of the null literal
